packages/editor/src/form/components/formql-editor.component.scss
@import "../../variables.scss";

*,
*::after,
*::before {
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

.fql-editor-window {
    display: grid;
    display: -ms-grid;
    grid-template-areas: "header header" "sidebar main";
    grid-template-columns: 60px 1fr;
    -ms-grid-columns: 60px 1fr;
    grid-template-rows: 3rem 1fr;
    -ms-grid-columns: 3rem 1fr;
    position: relative;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    overflow: hidden;
    height: 100%
}

.fql-editor-header {
    grid-area: header;
    top: 0;
    left: 0;
    z-index: 2;
    background-color: rgb(28, 32, 34);
    -ms-grid-column: 1;
    -ms-grid-column-span: 2;
    -ms-grid-row: 1;
    display: flex;
    height: 3rem;
    align-items: center;
    padding:0 16px;
    white-space: nowrap;
}

.fql-editor-main {
    grid-area: main;
    -ms-grid-column: 2;
    -ms-grid-row: 2;
}

.fql-left-sidenav {
    grid-area: sidebar;
    -ms-grid-column: 1;
    -ms-grid-row: 2;
    background-color: #2a2a2a;
    width: 60px;
    min-width: 60px;

}

.fql-header-line {
    display: grid;
    display: -ms-grid;
    grid-template-columns: 30px auto auto min-content;
    -ms-grid-columns: 30px auto auto auto;
}

.fql-logo {
    -ms-grid-column: 1;
    -ms-grid-column-span: 1;
    -ms-grid-row: 1;
    -ms-grid-row-span: 1;
}
.fql-logo svg {
    height: 30px;
}

.fql-header-name {
    color: rgba(255, 255, 255, 0.7);
    vertical-align: middle;
    line-height: 30px;
    padding-left: 20px;
    padding-right: 20px;
    -ms-grid-column: 2;
    -ms-grid-column-span: 1;
    -ms-grid-row: 1;
    -ms-grid-row-span: 1;
    font-family: $font-family;
    font-size: $font-size-labels;
}

.fql-header-menu {
    color: rgba(255, 255, 255, 0.7);
    line-height: 30px;
    vertical-align: middle;
    text-align: center;
    -ms-grid-column: 3;
    -ms-grid-column-span: 1;
    -ms-grid-row: 1;
    -ms-grid-row-span: 1;
    display: grid;
    display: -ms-grid;
    grid-template-columns: 30px 30px;
    -ms-grid-columns: 30px 30px;
    cursor: pointer;
    padding-left: 5px;
    padding-right: 7px;
    border: 1px solid rgb(28, 32, 34);
    font-family: $font-family;
}

.fql-header-menu:hover {
    color: rgba(255, 255, 255, 0.9);
    border: 1px solid;
}

.fql-header-menu:hover > .fql-logo-save svg {
    fill: rgba(255, 255, 255, 0.9);
}


.fql-logo-save {
    vertical-align: middle;
    line-height: 43px;
    width: 23px;
    height: 25px;
    -ms-grid-column: 1;
    -ms-grid-column-span: 1;
    -ms-grid-row: 1;
    -ms-grid-row-span: 1;
}

.fql-logo-save svg {
     fill: rgba(255, 255, 255, 0.7);
}

.fql-logo-save-label {
    display: inline-block;
    -ms-grid-column: 2;
    -ms-grid-column-span: 1;
    -ms-grid-row: 1;
    -ms-grid-row-span: 1;
    font-size: $font-size-labels;
}

.fql-header-setting {
    font-family: $font-family;
    flex-grow: 1;
}





.fql-logo-setting {
    vertical-align: middle;
    margin-left: auto;
    line-height: 30px;
    width: 23px;
    height: 25px;
    -ms-grid-column: 1;
    -ms-grid-column-span: 1;
    -ms-grid-row: 1;
    -ms-grid-row-span: 1;
}

.fql-logo-setting svg {
     fill: rgba(255, 255, 255, 0.7);
}
.fql-logo-setting:hover svg {
    cursor: pointer;
    fill: rgba(255, 255, 255, 0.9);
}


.fql-slide-bar {
    position: absolute;
	top: 3rem;
    right: 0;
	z-index: 100;
	visibility: hidden;
	width: 50%;
	height: 95%;
	background: #fff;
	-webkit-transition: all 0.5s;
    transition: all 0.5s;
    overflow-y: auto;
}

.fql-slide-bar::after {
	position: absolute;
	top: 3rem;
	left: 0;
	width: 100%;
	height: 100%;
	background: rgba(0,0,0,0.2);
	content: '';
	opacity: 1;
	-webkit-transition: opacity 0.5s;
	transition: opacity 0.5s;
}

.fql-slide-pusher {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
	width: 100%;
	height: 100%;
    z-index: 99;
    opacity: 0.5;
    -webkit-transition: background 0.5s ease-out;
    transition: background 0.5s ease-out;
    background: black;
    
}


.fql-slide-bar-open .fql-slide-pusher::after {
    width: 100%;
	height: 100%;
	opacity: 1;
	-webkit-transition: opacity 0.5s;
	transition: opacity 0.5s;
}

.fql-slide-bar-open .fql-slide-bar::after {
	width: 0;
	height: 0; 
	opacity: 0;
	-webkit-transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
	transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
}

.fql-bar-effect.fql-slide-bar {
	visibility: visible;
    -webkit-transform: translate3d(100%, 0, 0);
    transform: translate3d(100%, 0, 0);

}

.fql-bar-effect.fql-slide-bar-open .fql-bar-effect.fql-slide-bar {
	visibility: visible;
	-webkit-transform: translate3d(0, 0, 0);
	transform: translate3d(0, 0, 0);
}

.fql-bar-effect.fql-slide-bar::after {
	display: none;
}

